# TradeCore

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  implementation_plan.md
benchmarks/: CMakeLists.txt  bm_allocator.cpp  bm_matching.cpp  bm_orderbook.cpp  bm_parser.cpp
benchmarks/results/: allocator_baseline.json  allocator_pool_vs_malloc.json  cache_analysis.md  cachegrind.out  perf_report.txt
cmake/: CompilerWarnings.cmake  GoogleBenchmark.cmake  GoogleTest.cmake  Sanitizers.cmake
docs/: architecture.md  developer_guide.md  memory_layout.md  performance_guide.md
include/tradecore/common/: assert.hpp  compiler.hpp  constants.hpp  endian.hpp  fixed_point.hpp  static_vector.hpp  timestamp.hpp  types.hpp
include/tradecore/lockfree/: mpsc_queue.hpp  spsc_queue.hpp
include/tradecore/matching/: execution_result.hpp  liquidity_analyzer.hpp  matching_engine.hpp  order_action.hpp  risk_pipeline.hpp  trade.hpp
include/tradecore/memory/: arena_allocator.hpp  huge_page.hpp  object_pool.hpp
include/tradecore/network/: moldudp64.hpp  transport_concept.hpp
include/tradecore/orderbook/: avl_statistics.hpp  avl_tree.hpp  book_digest.hpp  book_side.hpp  book_snapshot.hpp  flat_hash_map.hpp  flat_price_array.hpp  order.hpp  order_book.hpp  order_book_verifier.hpp  order_pool.hpp  price_level.hpp  price_level_pool.hpp
include/tradecore/parser/: book_update.hpp  book_update_validator.hpp  itch_parser.hpp  message_envelope.hpp  parser_context.hpp
include/tradecore/replay/: replay_clock.hpp  replay_engine.hpp
include/tradecore/telemetry/: histogram.hpp  latency_tracker.hpp  metrics_registry.hpp
scripts/: benchmark_runner.sh  validate_contracts.py
tests/: CMakeLists.txt
tests/unit/lockfree/: test_mpsc_queue.cpp  test_spsc_queue.cpp
tests/unit/matching/: test_matching_engine.cpp
tests/unit/memory/: test_arena_allocator.cpp  test_huge_page.cpp  test_object_pool.cpp
tests/unit/network/: test_moldudp64.cpp
tests/unit/orderbook/: test_book_snapshot.cpp  test_order_book_verifier.cpp  test_phase3a.cpp  test_phase3b.cpp  test_phase3d.cpp
tests/unit/parser/: test_itch_parser.cpp
tests/unit/replay/: test_replay_engine.cpp
tests/unit/telemetry/: test_telemetry.cpp
